tests/NormalTests/paczka2/big_fuzzy/69755662.err
Error in line 3: 1yg601apm7 A877 43,55
Error in line 6: W0TLMJrw A877 44,6
Error in line 12: W0TLMJrw A52 39,0
Error in line 18: iXURdCI S418 48,8
Error in line 13: B2vzR A52 20,6
Error in line 5: 1yg601apm7 A877 172,3
Error in line 37: MlIdib3T A52 53,6
Error in line 42: 1yg601apm7 S418 99,3
Error in line 35: B2vzR A204 0,9
Error in line 49: 1yg601apm7 A877 83,8
Error in line 56: 1yg601apm7 S418 15,4
Error in line 76: iXURdCI A877 88,8
Error in line 75: A204 A877 54,9
Error in line 93: B2vzR A877 24,2
Error in line 112: iXURdCI A204 50,1
Error in line 132: B2vzR A204 4,8
Error in line 145: MlIdib3T A204 80,3
Error in line 156: B2vzR A204 64,0
Error in line 153: W0TLMJrw A204 48,7
Error in line 172: lB0kirNv0t A877 18,4
Error in line 179: iXURdCI A204 21,6
Error in line 186: A204 A877 65,0
Error in line 187: A204 A204 43,3
Error in line 203: A204 A8^^ 86,8
Error in line 207: B2vzR A204 98,4
Error in line 212: B2vzR A52 68,1
Error in line 222: B2vzR A204 4,1
Error in line 201: A204 A877 49,3
Error in line 214: W0TLMJrw A52 5,0
Error in line 241: W0TLMJrw A204 94,9
Error in line 249: lB0kirNv0t A877 29,0
